# PaimbnailsGeode

./: .gitignore  CMakeLists.txt  GD_Classes_Reference.md  Geode_Referencia.md  MSVCFix.hpp  README.md  about.md  build.bat  build_output.txt  changelog.md  mod.json  support.md
.github/workflows/: build.yml
cloudflare-server/: .dev.vars.example  .gitignore  DEPLOY_GUIDE.md  README.md  UPDATE_MOD_GUIDE.md  migrate.js  migrate_driver.js  migrate_to_bunny.ps1  package.json  setup.bat  setup.sh  test.js  thumbnails.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml.bak
cloudflare-server/public/: download.html  feedback-admin.html  guidelines.html  index.html
cloudflare-server/src/: bunny-wrapper.js  image-security.js  image-utils.js  index.js  index.old.js  router.js
cloudflare-server/src/controllers/: admin.js  bot.js  featured.js  migration.js  mod-system.js  music.js  petshop.js  profiles.js  proxy.js  queue.js  ratings.js  reports.js  suggestions.js  thumbnails.js
cloudflare-server/src/middleware/: auth.js  cors.js  security.js
cloudflare-server/src/pages/: donate.js  guidelines.js  home.js
cloudflare-server/src/services/: cache.js  leaderboard.js  moderation.js  profanity.js  storage.js  versions.js  webhook.js
docs/: GEODE_AUDIT_NOTES.md  HOOK_PRIORITY_MATRIX.md  MARCO_METODOLOGICO_AUDITORIA_GEODE.md  QA_LOGGING_CHECKLIST.md
layers/: ButtonEditOverlay.cpp  ButtonEditOverlay.hpp  CaptureEditPopup.hpp  LeaderboardLayer.cpp  ProfileImgPopup.cpp  ProfileMusicPopup.hpp  ReportInputPopup.cpp  ReportInputPopup.hpp  VerificationQueuePopup.cpp
managers/: DynamicSongManager.cpp  DynamicSongManager.hpp  LevelColors.cpp  LocalThumbs.cpp  LocalThumbs.hpp  PendingQueue.cpp  ProfileMusicManager.cpp  ProfileMusicManager.hpp  ProfilePrefs.cpp  ProfilePrefs.hpp  ProfileThumbs.hpp  TempThumbnails.cpp  ThumbnailAPI.hpp
settings/: DebugSettings.cpp
src/: main.cpp
src/core/: Bootstrap.cpp  DebugSettings.cpp  MaintenanceActions.cpp  QualityConfig.hpp  RuntimeLifecycle.cpp  Settings.hpp
src/features/audio/services/: AudioContextCoordinator.cpp  AudioContextCoordinator.hpp
src/features/backgrounds/services/: LayerBackgroundManager.cpp  LayerBackgroundManager.hpp
src/features/backgrounds/ui/: BackgroundConfigPopup.cpp  BackgroundConfigPopup.hpp  SameAsPickerPopup.cpp
src/features/badges/hooks/: BadgeHooks.cpp
src/features/badges/services/: BadgeCache.hpp
src/features/capture/services/: FramebufferCapture.cpp  FramebufferCapture.hpp
src/features/capture/ui/: CaptureEditPopup.cpp  CaptureEditPopup.hpp  CaptureLayerEditorPopup.cpp  CaptureLayerEditorPopup.hpp  CapturePreviewPopup.cpp  CapturePreviewPopup.hpp
src/features/community/ui/: CommunityHubLayer.cpp  (+5 more)
src/framework/compat/: ModCompat.hpp  SceneLocators.hpp
src/framework/net/: AsyncHttp.hpp  HttpTransport.hpp
src/framework/state/: SessionState.hpp
src/framework/ui/: PaimonButton.hpp  UIHelpers.hpp
src/hooks/: BadgeCache.hpp  BadgeHooks.cpp  CCDirector.cpp  CCEGLView.cpp  CreatorLayer.cpp  DailyLevelNode.cpp  DailyLevelPage.cpp  DynamicPopupHook.cpp  GJScoreCell.cpp  GauntletLayer.cpp  InfoLayer.cpp  KeyboardHook.cpp  LeaderboardsLayer.cpp  LevelAreaInnerLayer.cpp  LevelCell.cpp  LevelInfoLayer.cpp  LevelListCell.cpp  LevelListLayer.cpp  LevelPage.cpp  LevelSearchLayer.cpp  LevelSelectLayer.cpp  MapPackCell.cpp  MenuItemScaleFix.cpp  MenuLayer.cpp  PauseLayer.cpp  PetHook.cpp  PlayLayer.cpp  ProfilePage.cpp  ShaderLayerHook.cpp  SupportButtonHook.cpp  TransitionHook.cpp
src/layers/: AddModeratorPopup.cpp  AddModeratorPopup.hpp  BackgroundConfigPopup.cpp  BackgroundConfigPopup.hpp  BanListPopup.cpp  BanListPopup.hpp  BanUserPopup.cpp  ButtonEditOverlay.cpp  ButtonEditOverlay.hpp  CaptureEditPopup.cpp  CaptureLayerEditorPopup.cpp  CaptureLayerEditorPopup.hpp  CapturePreviewPopup.cpp  CapturePreviewPopup.hpp  CommunityHubLayer.cpp  CommunityHubLayer.hpp  CustomTransitionScene.cpp  CustomTransitionScene.hpp  ExtraEffectsPopup.cpp  ExtraEffectsPopup.hpp  LeaderboardHistoryLayer.cpp  LeaderboardHistoryLayer.hpp  LeaderboardLayer.cpp  LeaderboardLayer.hpp  LevelCellSettingsPopup.cpp  LevelCellSettingsPopup.hpp  LocalThumbnailViewPopup.cpp  LocalThumbnailViewPopup.hpp  ModeratorsLayer.cpp  ModeratorsLayer.hpp  PaiConfigLayer.cpp  PaiConfigLayer.hpp  PaimonInfoPopup.cpp  PaimonInfoPopup.hpp  PaimonShopPopup.cpp  PaimonShopPopup.hpp  PaimonSupportLayer.cpp  PaimonSupportLayer.hpp  PetConfigPopup.cpp  PetConfigPopup.hpp  (+25 more)
src/managers/: ButtonLayoutManager.cpp  ButtonLayoutManager.hpp  DynamicSongManager.cpp  DynamicSongManager.hpp  GifManager.cpp  GifManager.hpp  HoverManager.cpp  HoverManager.hpp  LayerBackgroundManager.cpp  LayerBackgroundManager.hpp  LevelColors.cpp  LevelColors.hpp  ListThumbnailManager.cpp  ListThumbnailManager.hpp  LocalThumbs.cpp  LocalThumbs.hpp  PendingQueue.cpp  PendingQueue.hpp  PetManager.cpp  PetManager.hpp  ProfileMusicManager.cpp  ProfileMusicManager.hpp  ProfilePicCustomizer.cpp  ProfilePicCustomizer.hpp  ProfilePrefs.cpp  ProfileThumbs.cpp  ProfileThumbs.hpp  TempThumbnails.hpp  ThumbnailAPI.cpp  ThumbnailAPI.hpp  ThumbnailLoader.cpp  ThumbnailLoader.hpp  ThumbsRegistry.cpp  ThumbsRegistry.hpp  TransitionManager.cpp  TransitionManager.hpp
src/settings/: DebugSettings.cpp
src/utils/: AnimatedGIFSprite.cpp  AnimatedGIFSprite.hpp  Assets.cpp  Assets.hpp  AudioInterop.hpp  ButtonEditLayer.cpp  ButtonEditLayer.hpp  Constants.hpp  Debug.hpp  DominantColors.cpp  DominantColors.hpp  DynamicPopupRegistry.hpp  FileDialog.cpp  FileDialog.hpp  FramebufferCapture.cpp  FramebufferCapture.hpp  GIFDecoder.cpp  GIFDecoder.hpp  HttpClient.cpp  HttpClient.hpp  ImageConverter.cpp  ImageConverter.hpp  ImageLoadHelper.hpp  InfoButton.cpp  InfoButton.hpp  ListThumbnailCarousel.cpp  ListThumbnailCarousel.hpp  Localization.hpp  MainThreadDelay.hpp  ModeratorUtils.hpp  PaimonButtonHighlighter.hpp  PaimonFormat.cpp  PaimonFormat.hpp  PaimonLoadingOverlay.cpp  PaimonLoadingOverlay.hpp  PaimonShaderSprite.hpp  PlayerToggleHelper.hpp  RenderTexture.cpp  RenderTexture.hpp  SafeGuard.hpp  (+11 more)
(+82 files in other folders)
